# vocolab

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENCE.txt  MANIFEST.in  README.md  TODO.md  _old.yaml  aliases.sh  app.Dockerfile  dispatch.Dockerfile  docker-compose.yaml  environment.yml  example.env  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
containers/: api.Dockerfile  init.sh  worker.Dockerfile
containers/dockerconfig/: docker.env  server.py
containers/evaluators/: index.yml  test_eval.py  test_eval.sh
containers/scripts/: doc-view.py  env-setup.sh
data/samples/: challenges.json
data/templates/emails/: email_validation.jinja2  new_challenge.jinja2  password_reset.jinja2
data/templates/mattermost/: leaderboard_update.jinja2  new_submission.jinja2
data/templates/pages/: email_verification.html.jinja2  password_reset.html.jinja2
docs/: 1_setup.md  3_administration.md  admin-cli.md  database.md  workers.md
docs/dev/: admin-cli.md  api-setup.md  api.md  new-challenge.md  settings.md
samples/: benchmark.json  benchmark_list.json  challenge.json  challenges.json  challenges_list.json  leaderboard.json  leaderboards_list.json  users.json
saved_data/: challenges.json  leaderboards.json  users.json
scratches/: FileManiputationTesting.ipynb  submissions.ipynb
scripts/: dispatch-init.sh  doc-view.py  prestart.sh  upload.py
test_data/: users.json
tests/: conftest.py
tests/fixtures/: api.py  db.py  utils.py
tests/units/: test_files_manipulation.py
vocolab/: __init__.py  __main__.py  __out__.py  exc.py  settings.py
vocolab/admin/: __main__.py  main.py
vocolab/admin/commands/: __init__.py  api.py  challenges.py  evaluators.py  leaderboards.py  messaging.py  settings.py  submissions.py  task_worker.py  test.py  user.py
vocolab/api/: __init__.py  main.py  router.py
vocolab/api/endpoints/: auth.py  benchmarks.py  challenges.py  leaderboards.py  models.py  submissions.py  users.py
vocolab/api/pages/: users.py
vocolab/core/: api_lib.py  cmd_lib.py  commons.py  evaluators_lib.py  leaderboards_lib.py  users_lib.py
vocolab/core/leaderboards_lib/: __init__.py  leaderboards.py
vocolab/core/misc/: various_functions.py
vocolab/core/notify/: mattermost.py
vocolab/core/old_implementations/: submissions.py  submissions_lib.py
vocolab/core/submission_lib/: logs.py  submission.py  upload.py
vocolab/core/worker_lib/: utils.py
vocolab/data/: admin.py  db.py  exc.py  tables.py
vocolab/data/model_queries/: __init__.py  auth.py  challenges.py  leaderboard.py  leaderboars.py  models.py
vocolab/data/models/: __init__.py  cli.py  misc.py  tasks.py
vocolab/data/q/: __init__.py  challenges.py
vocolab/db/: __init__.py  base.py
vocolab/db/models/: cli.py  file_split.py  misc.py
vocolab/db/q/: challenges.py  leaderboards.py  users.py
vocolab/db/schema/: __init__.py  auth.py  challenges.py
vocolab/lib/: api_lib.py  evaluators_lib.py  leaderboards_lib.py  submissions_lib.py  users_lib.py
vocolab/lib/_fs/: __init__.py  commons.py  file_spilt.py  leaderboards.py  submissions.py  users.py
vocolab/lib/misc/: various_functions.py
vocolab/lib/notify/: email.py  mattermost.py
vocolab/lib/submission_lib/: logs.py  submission.py  upload.py
vocolab/lib/testing/: submissions.py
vocolab/lib/worker_lib/: utils.py
vocolab/templates/config/: gunicorn_app.wsgi
vocolab/templates/emails/: __init__.py
vocolab/templates/pages/: email_verification.html.jinja2  reset_password2.html.jinja2
vocolab/worker/: echo_test.py  server.py
zerospeech/: __init__.py  __out__.py  exc.py  log.py  msg_queue.py  out.py  settings.py
zerospeech/admin/: __main__.py  cmd_lib.py  main.py  model.py  test_email.py
zerospeech/admin/cli/: challenges.py  checks.py  cmd_types.py  evaluators.py  main.py  submissions.py  user.py
zerospeech/admin/commands/: __init__.py  api.py  challenges.py  checks.py  evaluators.py  leaderboards.py  settings.py  submissions.py  task_worker.py  test.py  user.py
zerospeech/api/: __init__.py  __main__.py  api_utils.py  auth.py  challenges.py  cmd.py  main.py  router.py  users.py
zerospeech/api/endpoints/: auth.py  challenges.py  leaderboards.py  users.py
zerospeech/api/models/: __init__.py
zerospeech/api/pages/: users.py
zerospeech/api/v1/: router.py
zerospeech/bg_tasks/: evaluation.py  test.py
zerospeech/db/: __init__.py  admin.py  base.py  exc.py  schema.py
zerospeech/db/models/: __init__.py  auth.py  cli.py  data_models.py  tasks.py
zerospeech/db/q/: __init__.py  challenges.py  leaderboard.py  leaderboards.py  users.py
zerospeech/db/schema/: __init__.py  auth.py  challenges.py  data_models.py
zerospeech/dispatcher/: executors.py  worker.py
zerospeech/lib/: api_lib.py  evaluators_lib.py  leaderboards_lib.py  submissions_lib.py  users_lib.py
zerospeech/lib/_fs/: __init__.py  commons.py  file_spilt.py  leaderboards.py  submissions.py  users.py
zerospeech/lib/misc/: __init__.py  various_definitions.py  various_functions.py
zerospeech/task_manager/: __init__.py  __main__.py  config.py  main.py  model.py  pika_utils.py  server.py  supervisors.py  test_send.py
zerospeech/tasks/: client.py  updates.py
zerospeech/utils/: __init__.py  users.py
zerospeech/worker/: __init__.py  echo_test.py  run_server.py  server.py  test_send.py
zerospeech/workers/: __init__.py  base_worker.py
(+95 files in other folders)
