[project]
name = "zerospeech-admin"
version = "0.1.0"
description = "Back-end for the Zerospeech Challenge."
authors = [
    "Nicolas Hamilakis <nicolas.hamilakis@ens.fr>"
]
license = "GPL3"
readme = "README.md"
python = "^3.7"
homepage = "https://zerospeech.com"
repository = "https://gitlab.cognitive-ml.fr/zerospeech-challenge/core/zerospeech-admin"
documentation = "https://docs.zerospeech.com"

keywords = ["zerospeech", "challenge", "speech processing"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
backcall = "^0.2.0"
certifi = "^2020.12.5"
click = "^7.1.2"
decorator = "^4.4.2"
dnspython = "^2.0.0"
email-validator = "^1.1.2"
fastapi = "^0.62.0"
h11 = "^0.11.0"
idna = "^2.10"
jedi = "^0.17.0"
pydantic = "^1.7.3"
python-dotenv = "^0.15.0"
SQLAlchemy = "^1.3.20"
starlette = "^0.13.6"
typing-extensions = "^3.7.4.3"
uvicorn = "^0.13.1"
databases = "^0.4.1"
aiosqlite = "^0.16.0"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"
fastapi-mail = "^0.3.1.1"
requests = "^2.25.1"
rich = "^9.12.4"

[dev-dependencies]
ipython = "^7.21.0"
pip-tools = "^5.5.0"
pytest = "^6.2.2"

[scripts]
zr = "zerospeech.admin.cli.main:run_cli"


[build-system]
requires = [
    "setuptools >= 49.2.1",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"


[virtualenvs]
create = true
in-project = true
