[metadata]
name = zerospeech-admin
version = 0.0.2
url = https://zerospeech.com/
license = GPL3
license_file = LICENCE.txt
author = Nicolas Hamilakis, CoML team ENS/Inria Paris
maintainer = Nicolas Hamilakis, CoML team ENS/Inria Paris
maintainer_email = contanct@zerospeech.com
description = Back-end for the Zerospeech Challenge.
long_description = file: README.md
long_description_content_type = text/md
keywords = zerospeech, challenge, api
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

project_urls =
    Gitlab = https://gitlab.cognitive-ml.fr/zerospeech-challenge/core/zerospeech-admin
    WebsiteGit = https://gitlab.cognitive-ml.fr/zerospeech-challenge/core/zerospeech-website

[options]
packages = find:
package_dir =
    =.

[options.packages.find]
where = .
include = zerospeech*
exclude = tests

[options.entry_points]
console_scripts =
    zr=zerospeech.admin.cli.main:run_cli
    zr-api=zerospeech.api:run_local

[bdist_wheel]
universal = true
