[metadata]
name = vocolab
version = 0.5.0
url = https://github.com/zerospeech/vocolab
license = GPL3
license_file = LICENCE.txt
author = Nicolas Hamilakis, CoML team ENS/Inria Paris
maintainer = Nicolas Hamilakis, CoML team ENS/Inria Paris
maintainer_email = nicolas.hamilakis@ens.psl.eu
description = Back-end for the Zerospeech Challenge.
long_description = file: README.md
long_description_content_type = text/md
keywords = zerospeech, challenge, api
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

project_urls =
    Github = https://github.com/zerospeech/vocolab

[options]
packages = find:
package_dir =
    =.

[options.packages.find]
where = .
include = vocolab*
exclude = tests

[options.entry_points]
console_scripts =
    voco=vocolab.admin.main:run_cli

[bdist_wheel]
universal = true
